fdo#54094: Add a space in sw outline tooltips

Change-Id: I1f2046cc52261b717165a2f6838a826acefb7b09